--- a/app/src/main/res/layout/main_fragment.xml
+++ b/app/src/main/res/layout/main_fragment.xml
@@ -20,4 +20,12 @@
     android:drawableEnd="@drawable/arrow_right"
     android:padding="24dp"
     android:text="@string/start_search_profile_button" />
+
+  <Button
+    android:id="@+id/start_favorites_activity_button"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:drawableEnd="@drawable/arrow_right"
+    android:padding="24dp"
+    android:text="Favorites" />
 </LinearLayout>
