Added some baseline stuff. Nothing connected graphically yet, though

--- a/app/src/main/res/layout/activity_shop.xml
+++ b/app/src/main/res/layout/activity_shop.xml
@@ -10,7 +10,7 @@
   <TextView
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:text="I am shop"/>
+    android:id="@id/shop_name"/>
 
   <FrameLayout
     android:id="@+id/shop_fragment_container"
