--- a/app/src/main/res/layout/activity_bean.xml
+++ b/app/src/main/res/layout/activity_bean.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
 xmlns:tools="http://schemas.android.com/tools"
 android:layout_width="match_parent"
 android:layout_height="match_parent"
@@ -7,15 +7,57 @@ android:orientation="vertical"
 android:gravity="center"
 tools:context=".beantask.BeanActivity">
 
-<TextView
-  android:layout_width="match_parent"
-  android:layout_height="wrap_content"
-  android:text="I am bean"/>
+  <TextView
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:layout_centerHorizontal="true"
+    android:layout_above="@+id/description"
+    android:layout_marginBottom="20dp"
+    android:fontFamily="@font/lato"
+    android:textColor="@color/text_color_dark"
+    android:textSize="34sp"
+    android:textStyle="bold"
+    android:id="@+id/name"/>
 
-<FrameLayout
-  android:id="@+id/bean_fragment_container"
-  android:layout_width="match_parent"
-  android:layout_height="match_parent">
+  <TextView
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:layout_centerHorizontal="true"
+    android:layout_above="@+id/roast"
+    android:layout_marginBottom="20dp"
+    android:fontFamily="@font/lato"
+    android:textColor="@color/text_color_dark"
+    android:textSize="12sp"
+    android:textStyle="bold"
+    android:id="@+id/description"/>
 
-</FrameLayout>
-</LinearLayout>
+  <TextView
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:layout_centerHorizontal="true"
+    android:layout_above="@+id/origin"
+    android:layout_marginBottom="20dp"
+    android:fontFamily="@font/lato"
+    android:textColor="@color/text_color_dark"
+    android:textSize="12sp"
+    android:textStyle="bold"
+    android:id="@+id/roast"/>
+
+  <TextView
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:layout_centerHorizontal="true"
+    android:layout_marginBottom="20dp"
+    android:fontFamily="@font/lato"
+    android:textColor="@color/text_color_dark"
+    android:textSize="12sp"
+    android:textStyle="bold"
+    android:id="@+id/origin"/>
+
+  <FrameLayout
+    android:id="@+id/shop_fragment_container"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content">
+
+  </FrameLayout>
+</RelativeLayout>
