--- a/app/src/main/res/layout/activity_shop.xml
+++ b/app/src/main/res/layout/activity_shop.xml
@@ -17,7 +17,7 @@
     android:textColor="@color/text_color_dark"
     android:textSize="34sp"
     android:textStyle="bold"
-    android:id="@+id/shop_name"/>
+    android:id="@+id/name"/>
 
   <TextView
     android:layout_width="wrap_content"
