--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -18,6 +18,6 @@
   <!-- Rating Bar Theme -->
   <style name="RatingBar" parent="Theme.AppCompat">
     <item name="colorControlNormal">@color/colorPrimary</item>
-    <item name="colorControlActivated">@color/colorPrimaryDark</item>
+    <item name="colorControlActivated">@color/colorPrimary</item>
   </style>
 </resources>
