Added styles for drink and bean

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,5 @@
   <color name="colorAccent">#FF4081</color>
   <color name="white">#FFFFFF</color>
   <color name="lightGrey">#828282</color>
+  <color name="backgroundGrey">#F5F5F5</color>
 </resources>
