--- a/app/src/main/res/layout/activity_drink.xml
+++ b/app/src/main/res/layout/activity_drink.xml
@@ -4,69 +4,106 @@
   android:layout_width="match_parent"
   android:layout_height="match_parent"
   android:orientation="vertical"
-  android:gravity="center"
+  android:background="@color/backgroundGrey"
   tools:context=".drinktask.DrinkActivity">
 
-  <TextView
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:layout_centerHorizontal="true"
-    android:layout_above="@+id/description"
-    android:layout_marginBottom="20dp"
-    android:fontFamily="@font/lato"
-    android:textColor="@color/text_color_dark"
-    android:textSize="34sp"
-    android:textStyle="bold"
-    android:id="@+id/name"/>
-
-  <TextView
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:layout_centerHorizontal="true"
-    android:layout_above="@+id/type"
-    android:layout_marginBottom="20dp"
-    android:fontFamily="@font/lato"
-    android:textColor="@color/text_color_dark"
-    android:textSize="12sp"
-    android:textStyle="bold"
-    android:id="@+id/description"/>
-
-  <TextView
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:layout_centerHorizontal="true"
-    android:layout_above="@+id/price"
-    android:layout_marginBottom="20dp"
-    android:fontFamily="@font/lato"
-    android:textColor="@color/text_color_dark"
-    android:textSize="12sp"
-    android:textStyle="bold"
-    android:id="@+id/type"/>
-
-  <TextView
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:layout_centerHorizontal="true"
-    android:layout_marginBottom="20dp"
-    android:fontFamily="@font/lato"
-    android:textColor="@color/text_color_dark"
-    android:textSize="12sp"
-    android:textStyle="bold"
-    android:id="@+id/price"/>
-
-  <RatingBar
-    android:theme="@style/RatingBar"
-    android:stepSize="1"
-    android:numStars="5"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:layout_centerHorizontal="true"
-    android:id="@+id/rating_bar"/>
-
-  <FrameLayout
-    android:id="@+id/shop_fragment_container"
+  <ImageView
+    android:id="@+id/drink_background"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="370dp"
+    android:layout_alignParentStart="true"
+    android:scaleType="centerCrop"
+    android:src="@drawable/shop_background"/>
 
-  </FrameLayout>
+  <RelativeLayout
+    android:id="@+id/drink_box"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:background="@color/white"
+    android:layout_marginLeft="20dp"
+    android:layout_above="@id/drink_center_anchor"
+
+    android:paddingTop="20dp"
+    android:paddingBottom="20dp"
+    android:gravity="center"
+    android:layout_marginRight="20dp">
+
+    <TextView
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:layout_centerHorizontal="true"
+      android:fontFamily="@font/lato"
+      android:textSize="24sp"
+      android:textStyle="bold"
+      android:id="@+id/name"/>
+
+    <TextView
+      android:layout_width="wrap_content"
+      android:layout_marginTop="10dp"
+      android:layout_height="wrap_content"
+      android:layout_centerHorizontal="true"
+      android:layout_below="@id/name"
+      android:fontFamily="@font/lato"
+      android:textSize="16sp"
+      android:id="@+id/price"/>
+
+    <RatingBar
+      android:theme="@style/RatingBar"
+      android:stepSize="1"
+      android:layout_below="@id/price"
+      android:layout_centerHorizontal="true"
+      android:numStars="5"
+      android:layout_marginTop="14dp"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:id="@+id/rating_bar"/>
+  </RelativeLayout>
+
+  <View
+    android:layout_width="0dp"
+    android:layout_height="0dp"
+    android:layout_centerInParent="true"
+    android:id="@+id/drink_center_anchor" />
+
+  <RelativeLayout
+    android:id="@+id/type_box"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:paddingTop="20dp"
+    android:layout_marginLeft="20dp"
+    android:layout_marginRight="20dp"
+    android:layout_marginTop="50dp"
+    android:layout_below="@id/drink_box"
+    android:paddingBottom="20dp"
+    android:background="@color/white">
+
+    <TextView
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:fontFamily="@font/lato"
+      android:layout_centerInParent="true"
+      android:textSize="16sp"
+      android:id="@+id/type"/>
+  </RelativeLayout>
+
+  <RelativeLayout
+    android:id="@+id/desc_box"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:padding="20dp"
+    android:layout_marginLeft="20dp"
+    android:layout_marginRight="20dp"
+    android:layout_marginTop="20dp"
+    android:layout_below="@id/type_box"
+    android:background="@color/white">
+
+    <TextView
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:fontFamily="@font/lato"
+      android:layout_centerInParent="true"
+      android:textSize="16sp"
+      android:id="@+id/description"/>
+  </RelativeLayout>
+
 </RelativeLayout>
