--- a/app/src/main/res/layout/activity_shop.xml
+++ b/app/src/main/res/layout/activity_shop.xml
@@ -4,7 +4,7 @@
   android:layout_width="match_parent"
   android:layout_height="match_parent"
   android:orientation="vertical"
-  android:background="#f5f5f5"
+  android:background="@color/backgroundGrey"
   tools:context=".shoptask.ShopActivity">
 
   <ImageView
